# open_rsai

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.guide
building_models/: CMakeIncludes.txt  CMakeLists.txt
building_models/include/rsai/building_models/: abstract.h  building_renderer.h  multiview_estimator.h  prismatic.h  roof_estimator.h  structure_estimator.h
building_models/src/: abstract.cpp  building_renderer.cpp  multiview_estimator.cpp  prismatic.cpp  roof_estimator.cpp  structure_estimator.cpp
common/: CMakeLists.txt
common/include/common/: arguments.h  arguments.hpp  definitions.h  file_utils.h  file_utils.hpp  progress_functions.hpp  promt_functions.hpp  string_utils.h  string_utils.hpp
differentiation/: CMakeIncludes.txt  CMakeLists.txt
differentiation/include/differentiation/: convolution_mask.h  convolution_mask.hpp  edge_detection.h  gauss_directed_derivative.h
differentiation/src/: edge_detection.cpp  gauss_directed_derivative.cpp
eigen_utils/: CMakeIncludes.txt  CMakeLists.txt
eigen_utils/include/eigen_utils/: gdal_bridges.h  geometry.h  math.hpp  vector_helpers.h  vector_helpers.hpp
eigen_utils/src/: gdal_bridges.cpp  geometry.cpp
gdal_utils/: CMakeIncludes.txt  CMakeLists.txt
gdal_utils/include/gdal_utils/: all_helpers.h  create_helpers.h  create_helpers.hpp  helper.h  helper.hpp  layers.h  open_helpers.h  open_helpers.hpp  operations.h  region_of_interest.h  shared_dataset.h  shared_feature.h  shared_geometry.h  shared_geometry.hpp  shared_options.h  shared_spatial_reference.h  shared_spatial_reference.hpp
gdal_utils/src/: layers.cpp  region_of_interest.cpp  shared_dataset.cpp  shared_feature.cpp  shared_options.cpp  shared_spatial_reference.cpp
geometry_utils/: CMakeIncludes.txt  CMakeLists.txt
geometry_utils/include/geometry_utils/: points_fill.h
geometry_utils/src/: points_fill.cpp
map_updater/command/: CMakeLists.txt
map_updater/command/src/: main.cpp
map_updater/functional/: CMakeLists.txt
map_updater/functional/include/rsai/: map_updater.h  map_updater.hpp
map_updater/tests/: CMakeLists.txt
markup/: CMakeIncludes.txt  CMakeLists.txt
markup/include/rsai/markup/: tile.h  tile_saver.h  writers.h
markup/src/: tile.cpp  tile_saver.cpp  writers.cpp
markup_writer/functional/: CMakeLists.txt
multiview_building_reconstructor/command/: CMakeLists.txt
multiview_building_reconstructor/command/src/: main.cpp
multiview_building_reconstructor/functional/: CMakeLists.txt
multiview_building_reconstructor/functional/include/rsai/: multiview_building_reconstructor.h  multiview_building_reconstructor.hpp
multiview_building_reconstructor/functional/src/: multiview_building_reconstructor.cpp
multiview_building_reconstructor/tests/: CMakeLists.txt
objects_bounds_finder/command/: CMakeLists.txt
objects_bounds_finder/command/src/: main.cpp
objects_bounds_finder/functional/: CMakeLists.txt
objects_bounds_finder/functional/include/rsai/: objects_bounds_finder.h  objects_bounds_finder.hpp
objects_bounds_finder/tests/: CMakeLists.txt
opencv_utils/: CMakeIncludes.txt  CMakeLists.txt
opencv_utils/include/opencv_utils/: gdal_bridges.h  geometry_renderer.h  raster_roi.h
opencv_utils/src/: gdal_bridges.cpp  raster_roi.cpp
predict/: CMakeLists.txt
projection_and_shade_locator/command/: CMakeLists.txt
projection_and_shade_locator/command/src/: main.cpp
projection_and_shade_locator/functional/: CMakeLists.txt
projection_and_shade_locator/functional/include/rsai/: building_variants_saver.h  projection_and_shade_locator.h  projection_and_shade_locator.hpp  sam_segmentor.h  sam_segmentor.hpp
projection_and_shade_locator/functional/src/: building_variants_saver.cpp  projection_and_shade_locator.cpp  sam_segmentor.cpp
projection_and_shade_locator/tests/: CMakeLists.txt
raster_inliers_extractor/command/: CMakeLists.txt
raster_inliers_extractor/command/src/: main.cpp
raster_inliers_extractor/functional/: CMakeLists.txt
raster_inliers_extractor/functional/include/rsai/: raster_inliers_extractor.h  raster_inliers_extractor.hpp
raster_inliers_extractor/tests/: CMakeLists.txt
roof_locator/command/: CMakeLists.txt
roof_locator/command/src/: main.cpp
roof_locator/functional/: CMakeLists.txt
roof_locator/functional/include/rsai/: roof_locator.h  roof_locator.hpp
roof_locator/tests/: CMakeLists.txt
scripts/: CMakeLists.txt  raster_composer.sh  sam_binary_segments.py  sam_locate_object.py  sam_utility.py  vector_composer.sh  yolo_detection_size_stats.py
segany_markup_by_objects/command/: CMakeLists.txt
segany_markup_by_objects/command/src/: main.cpp
segany_markup_by_objects/functional/: CMakeLists.txt
segany_markup_by_objects/functional/include/rsai/: segany_markup_by_objects.h  segany_markup_by_objects.hpp
segany_markup_by_objects/functional/src/: projection_and_shade_locator.cpp
segany_markup_by_objects/tests/: CMakeLists.txt
tests/: CMakeLists.txt  test_building_complexing.sh  test_map_updating.sh  test_raster_composition.sh  test_vector_composition.sh
threading_utils/: CMakeLists.txt
threading_utils/include/threading_utils/: gdal_iterators.h  gdal_iterators.hpp  thread_pool.h  thread_safe_feature_layer.h
threading_utils/src/: thread_pool.cpp  thread_safe_feature_layer.cpp
tutorial/: APPLICATIONS.md  CMakeLists.txt  EXAMPLES.md  REQUIREMENTS.md  TUTORIAL.md
vector_iou_estimator/command/: CMakeLists.txt
vector_iou_estimator/command/src/: main.cpp
vector_iou_estimator/functional/: CMakeLists.txt
vector_iou_estimator/functional/include/rsai/: vector_iou_estimator.h  vector_iou_estimator.hpp
vector_iou_estimator/tests/: CMakeLists.txt
weights/: CMakeLists.txt
